Added instructions for running the client with a custom LS ip